--- a/MyBlog.Web/Views/Shared/_Layout.cshtml
+++ b/MyBlog.Web/Views/Shared/_Layout.cshtml
@@ -33,12 +33,17 @@
                             </a>
 
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" 
+                                
+                                <li>
+                                    <!-- AdminTags/Add -->
+                                    <a class="dropdown-item" 
                                     asp-area="" 
                                     asp-controller="AdminTags"
-                                    asp-action="Add">Add Tag</a></li>
+                                    asp-action="Add">Add Tag</a>
+                                </li>
 
                                 <li>
+                                    <!-- AdminTags/List -->
                                     <a class="dropdown-item"
                                        asp-area=""
                                        asp-controller="AdminTags"
