--- a/MyBlog.Web/Views/AdminTags/Add.cshtml
+++ b/MyBlog.Web/Views/AdminTags/Add.cshtml
@@ -1,30 +1,41 @@
 ﻿<!-- Csharp inside this -->
-@model MyBlog.Web.Models.ViewModels.AddTagRequest  
+
 @{
     
 }
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
-        <h1 class="display-4">Admin Function</h1>
+         <h1 class="display-4">Admin Function</h1>
     </div>
 </div>
 
 <div class="container py-5">
-    <form method="post">
-        <div class="mb-3">
-            <label class="form-label">Name</label>
-            <input type="text" class="form-control" value="" id="name" asp-for="Name"/>
-        </div>
-        
-        <div class="mb-3">
-            <label class="form-label">Display Name</label>
-            <input type="text" class="form-control" value="" id="displayName" asp-for="DisplayName"/>
-        </div>
+    <div class="container d-flex justify-content-around pl-0">
+        <form method="post" action="/AdminTags/AddTag">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" class="form-control" name="Name" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Display Name</label>
+                <input type="text" class="form-control" name="DisplayName" />
+            </div>
+            <button type="submit" class="btn btn-dark">Add Tag</button>
+        </form>
 
-        <div class="mb-3">
-            <button type="submit" class="btn btn-dark">Submit</button>
-        </div>
-    </form>
+        <form method="post" action="/AdminTags/SubmitTag">
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <input type="text" class="form-control" name="Name" />
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Display Name</label>
+                <input type="text" class="form-control" name="DisplayName" />
+            </div>
+            <button type="submit" class="btn btn-dark">Update Tag</button>
+        </form>
+    </div>
 </div>
 
+            
