--- a/MyBlog.Web/Views/AdminTags/List.cshtml
+++ b/MyBlog.Web/Views/AdminTags/List.cshtml
@@ -4,36 +4,46 @@
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
-        <h1>Show All Tag - Admin Function</h      
+        <h1>Show All Tag - Admin Function</h1>      
     </div>
 </div>
 
 <!-- Store and View the List -->
 <div class="container py-5">
+    <!-- Get Table Datas existed a Model -->
     @if (Model != null && Model.Any())
     {
         <!--Boostrap table -->
         <table class= "table">
+            
             <thead>
                 <tr>
                     <th>Id</th>
                     <th>Name</th>
                     <th>Display Name</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
+
             <tbody>
+                <!-- Take the attributes of each Tag Object -->
                 @foreach (var tag in Model)
                 {
                     <tr>
                         <td>@tag.Id</td>
                         <td>@tag.Name</td>
-                        <td>@tag.DisplayName </td>
+                        <td>@tag.DisplayName</td>
+                        
+                        <td>
+                            <a asp-area="" 
+                            asp-controller="AdminTags"
+                            asp-action="Edit"
+                            asp-route-id="@tag.Id">Edit</a>
+                        </td>
                     </tr>
                 }
             </tbody>
-
         </table>
-
     }
     else
     {
