--- a/MyBlog.Web/Views/AdminTags/List.cshtml
+++ b/MyBlog.Web/Views/AdminTags/List.cshtml
@@ -34,6 +34,7 @@
                         <td>@tag.Name</td>
                         <td>@tag.DisplayName</td>
                         
+                        <!-- Edit Record with Id -->
                         <td>
                             <a asp-area="" 
                             asp-controller="AdminTags"
