--- a/MyBlog.Web/Views/AdminTags/Add.cshtml
+++ b/MyBlog.Web/Views/AdminTags/Add.cshtml
@@ -1,5 +1,4 @@
 ﻿<!-- Csharp inside this -->
-
 @{
     
 }
@@ -33,7 +32,7 @@
                 <label class="form-label">Display Name</label>
                 <input type="text" class="form-control" name="DisplayName" />
             </div>
-            <button type="submit" class="btn btn-dark">Update Tag</button>
+            <button type="submit" class="btn btn-dark">Submit Tag</button>
         </form>
     </div>
 </div>
