check point before replace Responsitory with Repository (gramma correction)

--- a/MyBlog.Web/Views/Shared/_Layout.cshtml
+++ b/MyBlog.Web/Views/Shared/_Layout.cshtml
@@ -49,6 +49,14 @@
                                        asp-controller="AdminTags"
                                        asp-action="List">Show All Tags</a>
                                 </li>
+
+                                <li>
+                                    <!-- AdminTags/List -->
+                                    <a class="dropdown-item"
+                                       asp-area=""
+                                       asp-controller="AdminBlogPosts"
+                                       asp-action="Add">Add Blog Post</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
