--- a/MyBlog.Web/Views/AdminBlogPosts/Add.cshtml
+++ b/MyBlog.Web/Views/AdminBlogPosts/Add.cshtml
@@ -39,10 +39,18 @@
         </div>
 
         <div class="mb-3">
+            <!-- Upload Image -->
+            <label class="form-label">Featured Image Upload</label>    
+            <input type="file" id="featuredImageUpload" class="form-control"/>
+            <!-- set style to none so img would be invisible before it have the image Url form the API-->
+            <img src="" id="featuredImageDisplay" style="display:none; width="300px;"/>
+        </div>
+
+        <div class="mb-3">
             <label class="form-label">
-                FeatureImageIRL
+                FeatureImageURL
             </label>
-            <input type="text" class="form-control" id="featureImageIRL" asp-for="FeatureImageUrl" />
+            <input type="text" class="form-control" id="featuredImageURL" asp-for="FeatureImageUrl" />
         </div>
 
         <div class="mb-3">
@@ -90,8 +98,67 @@
     </form>
 </div>
 
+<!-- 
+    Scripts Summary: 
+    FE: Uploaded Image Url save to Featured Image Url input
+    BE: fetch our API endpoint 'api/images' and Upload it to CLoudinary API Library using POST method
+    
+    1) To automate the Upload and POST image process we first get the featuredUploadElement element 
+       and featuredImageUrlElement to store images Url
+    2) Then use EventListener to activte 'uploadFeaturedImage' function if 
+       listen to any changes in featuredUploadElement
+    3) uploadFeaturedImage will responsible for 
+        + Get upload image info    
+        + talking to the API to upload the image
+            + save image data as 'file' type
+            + fetch ours API endpoint '/api/images' and use POST method
+        + Send back the result to console to check if successed
+
+-->
 @section Scripts {
     <script>
+        // use Froala TextEditor format for #content element
         var editor = new FroalaEditor('#content');
+        // get input image data in featuredUploadElement
+        const featuredUploadElement = document.getElementById('featuredImageUpload');
+        // save image Url in featuredImageUrlElement
+        const featuredImageUrlElement = document.getElementById('featuredImageURL');
+        // Display image with Url in featuredImageUrlElement 
+        const featuredImageDisplayElement = document.getElementById('featuredImageDisplay');
+
+        // e - represent changes event triggered by the file input
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+            
+            // Save image data type file to data 
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            // fetch API end point '/api/images' then upload image using POST method (like we did in Postman)
+            await fetch('/api/images', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*',
+                },
+                body: data
+            // listen to response and get result
+            }).then(response => response.json())
+                .then(result => {
+                    // save Image link to featuredImageUrlElement
+                    featuredImageUrlElement.value = result.link;
+                    if (featuredImageUrlElement.value != null) {
+                        // attach img Url from the API to featuredImageDisplayElement
+                        featuredImageDisplayElement.src = featuredImageUrlElement.value;
+                        // change Display style to Block to make it appear
+                        featuredImageDisplayElement.style.display = "block";
+                    }
+                    console.log(result);
+                });
+        }
+
+        // When the value of the input changes (i.e., the user selects a file)
+        // The uploadFeaturedImage function is automatically executed.
+        featuredUploadElement.addEventListener('change', uploadFeaturedImage);
     </script>
 }
+
