--- a/MyBlog.Web/Views/Shared/_Layout.cshtml
+++ b/MyBlog.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,8 @@
     <link href='https://cdn.jsdelivr.net/npm/froala-editor@4.0.10/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@4.0.10/js/froala_editor.pkgd.min.js'></script>
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark text-light border-bottom box-shadow">
             <div class="container">
@@ -87,7 +88,7 @@
             </main>
         </div>
 
-        <footer class="border-top footer text-muted">
+        <footer class="border-top footer text-muted mt-auto">
             <div class="container">
                 &copy; 2024 - MyBlog.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
