--- a/MyBlog.Web/Views/AdminBlogPosts/Edit.cshtml
+++ b/MyBlog.Web/Views/AdminBlogPosts/Edit.cshtml
@@ -3,6 +3,7 @@
 
 @{}
 
+
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
         <h1>All Blog Post - Admin Function</h1>
@@ -19,7 +20,6 @@
                 </label>
                 <input type="text" class="form-control" id="Id" asp-for="Id" readonly/>
             </div>
-
 
             <div class="mb-3">
                 <label class="form-label">
@@ -52,16 +52,16 @@
             <div class="mb-3">
                 <!-- Upload Image -->
                 <label class="form-label">Featured Image Upload</label>
-                <input type="file" id="featuredImageUpload" class="form-control" />
-                <!-- set style to none so img would be invisible before it have the image Url form the API-->
+                <input type="file" id="featuredImageUpload" class="form-control"/>
+                <!-- Set style to none so img would be invisible before it have the image Url form the API -->
                 <img src="" id="featuredImageDisplay" style="display:none; width="300px;" />
             </div>
 
             <div class="mb-3">
                 <label class="form-label">
-                    FeatureImageURL
+                    FeaturedImageUrl
                 </label>
-                <input type="text" class="form-control" id="featuredImageURL" asp-for="FeatureImageUrl" />
+                <input type="text" class="form-control" id="featuredImageURL" asp-for="FeaturedImageUrl" />
             </div>
 
             <div class="mb-3">
@@ -121,7 +121,6 @@
     }
 </div>
 
-
 <!--
     Scripts Summary:
     FE: Uploaded Image Url save to Featured Image Url input
@@ -140,6 +139,10 @@
 -->
 @section Scripts {
     <script>
+        var editor = new FroalaEditor('#content', {
+            imageUploadURL: '/api/images'
+        });
+        
         // use Froala TextEditor format for #content element
         var editor = new FroalaEditor('#content');
         // get input image data in featuredUploadElement
@@ -179,13 +182,14 @@
                 });
         }
 
+        // Display Image if featuredImageUrlElement existed
         if (featuredImageUrlElement.value != null) {
             // attach img Url from the API to featuredImageDisplayElement
             featuredImageDisplayElement.src = featuredImageUrlElement.value;
             // change Display style to Block to make it appear
             featuredImageDisplayElement.style.display = "block";
         }
-        else{
+        else {
             featuredImageDisplayElement.style.display = "none";
         }
 
