--- a/MyBlog.Web/Views/Home/Index.cshtml
+++ b/MyBlog.Web/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿<!-- select Model as a List of Blog Post -->
-@model List<MyBlog.Web.Models.Domain.BlogPost>
+@model MyBlog.Web.Models.ViewModels.HomeViewModel
+
+
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -10,7 +12,7 @@
 
 <div class="container my-3">
     <div class="row justify-content-center">
-        <div class="col-lg-8 p-3 my-2">
+        <div class="col-lg-8">
             <!-- Blog Name and Title -->
             <h1 action="display-5 fw-bold lh-1">
                 My Blog - SukmaBlog
@@ -23,13 +25,30 @@
     </div>
 </div>
 
+<div class="container my-3">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            @if (Model != null && Model.Tags.Any())
+            {
+                foreach (var tag in Model.Tags)
+                {
+                    <span class="badge bg-dark text-light me-1">
+                        @tag.Name
+                    </span>
+                }
+            }
+        </div>
+    </div>
+</div>
+
 <!-- BlogPosts Container -->
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            @if (Model != null && Model.Any())
+            
+            @if (Model != null && Model.BlogPosts.Any())
             {
-                foreach (var blogPost in Model)
+                foreach (var blogPost in Model.BlogPosts)
                 {
                     <article class="blog-post mb-5 card">
                         <div class="card-body">
