--- a/MyBlog.Web/Views/Shared/_Layout.cshtml
+++ b/MyBlog.Web/Views/Shared/_Layout.cshtml
@@ -73,11 +73,27 @@
                             </ul>
                         </li>
                     </ul>
-
                 </div> 
-                <!-- End of Header Component 1 -->
 
-                    <!-- End of Header Container -->
+                <!-- End of Header Component -->
+                <div class="d-flex">
+                    <a class="btn me-3 bg-light text-dark"
+                        asp-area=""
+                        asp-controller="Account"
+                        asp-action="Register">
+                        Register
+                    </a>
+                </div>
+
+                <div class="d-flex">
+                    <a class="btn me-3 text-light"
+                        asp-area=""
+                        asp-controller="Account"
+                        asp-action="Login">
+                        Login
+                    </a>
+                </div>
+                <!-- End of Header Container -->
                 </div>
             </nav>
         </header>
