Update Page Access Permission. User can only access home to view Blog (may allow to post blog later). And only Admin can have full access

--- a/MyBlog.Web/Views/Account/Register.cshtml
+++ b/MyBlog.Web/Views/Account/Register.cshtml
@@ -9,13 +9,14 @@
                 Register
             </h1>
 
-            <!-- asp-for connect data to the Controller->
+            <!-- asp-for connect data to the Controller -->
             <form method="post">
+         
                 <div class="mb-3">
                     <label class="form-label">Username</label>
-                    <!-- asp-for=UserName taken from RegisterViewModel -->
-                  <input type="text" id="username" class="form-control" asp-for="UserName"/>
+                    <input type="text" id="username" class="form-control" asp-for="UserName" />
                 </div>
+
 
                 <div class="mb-3">
                     <label class="form-label">Email</label>
