--- a/MyBlog.Web/Views/Home/Index.cshtml
+++ b/MyBlog.Web/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
                                     <div class="blog-post-tags">
                                         @foreach (var tag in blogPost.Tags)
                                         {
-                                            <a href="/blog/tag/@tag.Name" class="badge bg-secondary text-decoration-none">@tag.Name</a>
+                                            <a href="/blog/tag/@tag.Name" class="badge bg-dark text-light me-1 text-decoration-none">@tag.Name</a>
                                         }
                                     </div>
                                 }
